[gd_scene load_steps=3 format=3 uid="uid://ci6jh5nlgkrjq"]

[ext_resource type="Script" uid="uid://1gnflxuldvdh" path="res://Ui/menu_main.gd" id="1_srltq"]
[ext_resource type="Texture2D" uid="uid://bqjr0e4p3w14g" path="res://icon.svg" id="2_tjg4l"]

[node name="MenuMain" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_srltq")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 471.0
offset_top = 123.0
offset_right = 698.0
offset_bottom = 330.0
texture = ExtResource("2_tjg4l")

[node name="VBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -89.0
offset_bottom = -29.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="ButtonIniciar" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Empezar"

[node name="ButtonConfig" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Configuracion"

[node name="ButtonSalida" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "Salir
"
